blog-astro-Glob/Props terminado

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,33 @@
 ---
+import { siteConfig } from "../config/site-config";
+import MainLayout from "../layouts/MainLayout.astro";
+import BlogPost from "../components/BlogPost.astro"
 
+
+//Astro nos ofrece un objeto gloal llamado astro y dentro hay un metodo llamado blog
+//https://docs.astro.build/en/reference/api-reference/
+//Este comando nos va a permitir leer todos nuestro archivos md o mdx
+const posts= await Astro.glob("./posts/*{md,mdx}");
+console.log('index.astro'); 
+// console.log(posts);
+//Retorna los datos de los post
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<MainLayout title="Leandro Blog">
+	<!-- component -->
+<section class="bg-white dark:bg-gray-900">
+    <div class="container px-6 py-10 mx-auto">
+        <h1 class="text-3xl font-semibold text-gray-800 capitalize lg:text-4xl dark:text-white">{siteConfig.title}</h1>
+		
+
+        <div class="grid grid-cols-1 gap-8 mt-8 md:mt-16 md:grid-cols-2">
+			<!-- Vamos a tomar los post(la data de los archivos md, mdx) y los recorremos -->
+			<!-- el post viene con muchis datos del md,mmdx, los cuales se los vamos a pasar  como argumentos al componente BlogPost -->
+			{
+			posts.map(post => <BlogPost {...post} />)
+			}
+            
+        </div>
+    </div>
+</section>
+</MainLayout>
