--- a/src/components/TypedBlogPost.astro
+++ b/src/components/TypedBlogPost.astro
@@ -17,12 +17,14 @@ const frontmatter= post.data;
     <img class="object-cover w-full h-56 rounded-lg lg:w-64" 
     src={frontmatter.image} 
     alt={frontmatter.title}
-    >
+    />
     
 
     <div class="flex flex-col justify-between py-6 lg:mx-6">
-        <a href={`/posts/${post.slug}`} class="text-xl font-semibold  hover:underline text-white">
-            {frontmatter.description}
+        <a 
+        href={`/posts/${post.slug}`}
+        class="text-xl font-semibold  hover:underline text-white">
+        {frontmatter.description}
         </a>
         <span class="text-sm  dark:text-gray-300">{Formatter.formatDate(frontmatter.date)}</span>
     </div>
