--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -36,7 +36,7 @@ const {title}=Astro.props;
 	</head>
 	<body class="bg-gray-900">
 		<main class="mb-1 max-w-5xl m-auto px-2 py-2">
-			<a href="/" class="text-red-600">Regresar</a>
+			<a href="/" id="btn-back" class="text-red-600">Regresar</a>
 			<slot />
 		</main>
 	</body>
