--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -19,7 +19,7 @@ const {title}=Astro.props;
 		<ViewTransitions></ViewTransitions>
 	</head>
 	<body class="bg-gray-900">
-		<main class="mb-1 max-w-5xl m-auto px-2 py-2">
+		<main class="mb-1 max-w-5xl m-auto px-2 py-2 border border-red-500">
 			<slot />
 		</main>
 	</body>
