--- a/src/pages/images/index.astro
+++ b/src/pages/images/index.astro
@@ -1,28 +1,77 @@
 ---
-import { Image } from "astro:assets";
+import { Image, Picture } from "astro:assets";
 import MainLayout from "src/layouts/MainLayout.astro";
 
 
-import post05 from '@images/post-05.png';
+import post05Img from '@images/post-05.png';
+
 ---
 
 <MainLayout title="Imagenes">
+
     <h1 class="text-5xl text-white">Imágenes</h1>
     <!-- Loading=leager carga todas las imagen de la pagina, mientras que lazy solo las cargas cuando son visible en pantalla -->
-    <img 
-    loading="eager" 
-    src="/assets/images/post-05.png" 
-    width="250" 
+    <!-- loading="eager" -->
+    <img
+    src="/assets/images/post-05.png"
+    width="250"
     height="250" alt="" />
     
 
-    <Image
-    loading="eager" 
-    src={post05} 
-    width="250" 
-    height="250" alt="imagen del post"/>
-    </Image>
+    <!--Componentes Image nativo de ASTRO-->
+    <Image src={post05Img} width="250" height="250" alt="imagen del post"/>
 
+    <Image src={post05Img} alt="imagen del post"
+    style={{
+        width:"250px", 
+        height:"250px", 
+    }}
+    width="500" 
+    height="500"
+    />
+
+    <h1>Quality Low</h1>
+    <Image 
+    src={post05Img}
+    quality="low"
+    width="250"
+    height="250" 
+    alt="imagen del post"/>
+
+    <h1>Quality Medium</h1>
+    <Image 
+    src={post05Img}
+    quality="low"
+    width="250"
+    height="250" 
+    alt="imagen del post"/>
+
+    <h1>Quality High</h1>
+    <Image 
+    src={post05Img}
+    quality="high"
+    width="250"
+    height="250" 
+    alt="imagen del post"/>
+
+    <h1>Formatos</h1>
+    <Image 
+    src={post05Img}
+    format="avif"
+    width="250"
+    height="250" 
+    alt="imagen del post"/>
+
+    <h1>Picture</h1>
+    <Picture 
+    src={post05Img}
+    formats={['webp','avif','jpg']}
+    widths={[240, 540, 720, post05Img.width]}
+    sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px, ${post05Img.width}px`}
+ 
+    width="250"
+    height="250" 
+    alt="imagen del post"/>
 
 
 
@@ -32,9 +81,12 @@ import post05 from '@images/post-05.png';
 
     </div>
 
-    <img 
-    loading="lazy"
-    src="/assets/images/post-05.png" width="250" height="250" alt="imagen del post">
 
 
 </MainLayout>
+
+<style>
+    h1{
+        @apply text-white mt-10;
+    }
+</style>
