--- a/src/components/TypedBlogPost.astro
+++ b/src/components/TypedBlogPost.astro
@@ -1,6 +1,8 @@
 ---
 import {Formatter} from '@utils/formatter'
+import { Image } from 'astro:assets';
 import type { CollectionEntry } from 'astro:content';
+import { lazy } from 'astro:schema';
 
 interface Props {
     post: CollectionEntry<'blog'>;
@@ -14,9 +16,14 @@ const frontmatter= post.data;
 ---
 
 <div class="lg:flex">
-    <img class="object-cover w-full h-56 rounded-lg lg:w-64" 
+    <Image 
+    class="object-cover w-full h-56 rounded-lg lg:w-64" 
     src={frontmatter.image} 
     alt={frontmatter.title}
+    width:{500}
+    heigt:{500}
+    quality="low"
+    loading="lazy"
     />
     
 
