--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,6 +27,9 @@ const blogPosts= await getCollection('blog');
 			} -->
             
         <!-- </div> -->
+         
+        <a href="/blog/1">Blog Paginado</a>
+
         <div class="grid grid-cols-1 gap-8 mt-8 md:mt-16 md:grid-cols-2">
 			{blogPosts.map((post) => <TypedBlogPost post={post} />)}
         </div>
@@ -34,3 +37,13 @@ const blogPosts= await getCollection('blog');
     </div>
 </section>
 </MainLayout>
+
+<style>
+     a {
+    @apply text-blue-500 hover:underline;
+  }
+
+  .disabled {
+    @apply bg-gray-600 hover:bg-gray-600;
+  }
+</style>
