--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,9 @@ const blogPosts= await getCollection('blog');
             
         <!-- </div> -->
          
-        <a href="/blog/1">Blog Paginado</a>
+        <a class="mr-2" href="/blog/1">Blog Paginado</a>
+        <a class="mr-2" href="/authors">Autores</a>
+
 
         <div class="grid grid-cols-1 gap-8 mt-8 md:mt-16 md:grid-cols-2">
 			{blogPosts.map((post) => <TypedBlogPost post={post} />)}
