--- a/src/pages/images/index.astro
+++ b/src/pages/images/index.astro
@@ -86,7 +86,5 @@ import post05Img from '@images/post-05.png';
 </MainLayout>
 
 <style>
-    h1{
-        @apply text-white mt-10;
-    }
+    h1{@apply text-white mt-10;}
 </style>
