--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -16,7 +16,12 @@ const {title}=Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 
-		<ViewTransitions></ViewTransitions>
+		<link
+    rel="alternate"
+    type="application/rss+xml"
+    title="Leandro blog"
+    href={new URL("rss.xml", Astro.site)}
+/>
 	</head>
 	<body class="bg-gray-900">
 		<main class="mb-1 max-w-5xl m-auto px-5 md:px-2 py-2 border border-red-500">
